# CorsacScript

./: .gitignore  dune-project  examples  script.crs  simple_types.crs  std.crs  test.py
src/ast/: AST.ml  compiler.ml  dune  eval.ml  lexer.mll  parser.mly  std.ml  typecheck.ml  utils.ml
src/compiler/: compiler.ml  dune
src/virtual_machine/: dune  types.ml  vm.ml
